# world-calendar

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  docker-compose.yml  lint-staged.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.ts  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Docker/: Dockerfile
app/: api.py  main.py  models.py
app/utils/: log.py
backend/: config.py  constants.py  main.py  models.py
backend/auth/: dependencies.py  jwt.py  routes.py  schemas.py  service.py
backend/utils/: token.py
docs/: development.md
frontend/: tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(pages)/events/: page.tsx
frontend/src/components/forms/: create-evenet-form.tsx
frontend/src/components/header/: calendar-mode-select.tsx  header.tsx
frontend/src/components/pages/events/: event-content-area.tsx  event-schedule-side-panel.tsx
frontend/src/components/pages/home/: calendar-day-view.tsx  calendar-month-view.tsx  calendar-view.tsx  calendar-week-view.tsx  sidebar.tsx
frontend/src/components/providers/: tanstack-query-provider.tsx
frontend/src/components/ui/: button.tsx  calendar.tsx  command.tsx  editor.tsx  form.tsx  input.tsx  location-autocomplete-selector.tsx  modal.tsx  overlay.tsx  scroll-area.tsx  select.tsx
frontend/src/hooks/: use-calendar.ts  use-event-store.ts  use-modal.ts  use-sidebar.ts  use-window-size.ts
frontend/src/hooks/api/: use-openstreetmap-location.ts
frontend/src/lib/: config.ts  time.ts  utils.ts
server/: settings.py
tests/: conftest.py
tests/auth/: test_routes.py
world_calendar/: apps.py  models.py
