[tool.poetry]
name = "world-calendar"
version = "0.1.0"
description = "Calendar to keep track of political events"
authors = ["Miguel Luis <misc@elmassas.com>"]
repository = "https://github.com/Tiny-Brother/world-calendar"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.6.1"
pymongo = "^4.6.3"
loguru = "^0.7.2"
mongoengine = "^0.28.2"
pydantic = "^2.7.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"


[tool.poetry.group.dev.dependencies]
pytest-fastapi = "^0.1.0"
pytest = "^7.2.2"
pre-commit = "^3.3.1"
black = "^24.1.1"
ruff = "^0.2.1"

[tool.poetry.scripts]
app = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # complexity
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
